# MorphoTactus

./: CMakeLists.txt  LICENSE  README.md  build.sh  setup.cfg  setup.py
MorphoTactus/: hybrid_detector_node.py  image_source_node.py  preprocessing_node.py  video_viewer_node.py
MorphoTactus/utils/: sift_analyzer.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/MorphoTactus/lib/MorphoTactus/: hybrid_detector_node  image_source_node  preprocessing_node  realtime_video_viewer_node  simple_video_viewer_node  video_viewer_node
install/MorphoTactus/share/MorphoTactus/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/MorphoTactus/share/MorphoTactus/config/: detector_params.yaml
install/MorphoTactus/share/MorphoTactus/launch/: defect_detection_system.launch.py
install/MorphoTactus/share/MorphoTactus/msg/: DefectInfo.msg
launch/: defect_detection_system.launch.py  simple_defect_detection.launch.py
log/: latest_build
msg/: DefectMetadata.msg
scripts/: realtime_video_viewer.py
test/: test_system.py
